@startuml
hide circle
skinparam classAttributeIconSize 0
hide footbox

' Define the abstract base class
abstract class "<<abstract>> \n Command" {
    - description: String
    + execute(budgetManager): void
    + isExit(): boolean
}

' Define all subclasses
class AddExpenseCommand
class AlertCommand
class CheckBudgetCommand
class DeleteCommand
class EditBudgetCommand
class EditExpenseCommand
class ExitCommand
class FindExpenseCommand
class HelpCommand
class ListCommand
class SetBudgetCommand
class SummaryCommand

' Define inheritance relationships
"<<abstract>> \n Command" <|-- AddExpenseCommand
"<<abstract>> \n Command" <|-- AlertCommand
"<<abstract>> \n Command" <|-- CheckBudgetCommand
"<<abstract>> \n Command" <|-- DeleteCommand
"<<abstract>> \n Command" <|-- EditBudgetCommand
"<<abstract>> \n Command" <|-- EditExpenseCommand
"<<abstract>> \n Command" <|-- ExitCommand
"<<abstract>> \n Command" <|-- FindExpenseCommand
"<<abstract>> \n Command" <|-- HelpCommand
"<<abstract>> \n Command" <|-- ListCommand
"<<abstract>> \n Command" <|-- SetBudgetCommand
"<<abstract>> \n Command" <|-- SummaryCommand

@enduml
